--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,41 @@
 table {
-    border: solid thick #000000;
-    width: 100%;
+    float: left;
+    width: auto;
+    height: auto;
 }
 
-th, td {
-    border: solid thick #00b3ee;
+td {
+    position: relative;
 
-    text-align: left;
-    padding: 8px;
+    margin: 2px;
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+    box-shadow: 3px 3px 1px #888888;
+    border-radius: 8%;
+}
+.ship-list{
+    margin-left: 100px;
+    float: left;
+    width: 400px;
+    height: auto;
+
+
 }
 
-tr:nth-child(even){background-color: #f2f2f2}
+.rotate {
+    transform: rotate(180deg);
+    transition-duration: 2s;
+}
 
-th {
-    background-color: #4CAF50;
-    color: white;
+
+a{
+    position: inherit;
+    margin-left: 60%;
+    margin-top: -8% ;
+
+}
+.game{
+    width: 80%;
+    margin: auto;
 }
